# band

./: .envrc  .gitignore  Cargo.toml  shell.nix
band/: Cargo.toml
band/src/: main.rs
config/src/: lib.rs
data_process/: Cargo.toml
data_process/src/: audio.rs  chunk.rs  data.rs  main.rs  midi.rs
model/: Cargo.toml
model/src/: data.rs  features.rs  labels.rs  lib.rs  loss.rs  model.rs  predictions.rs  training.rs
sound_stream/: Cargo.toml
sound_stream/src/: lib.rs
src/: config.rs  data.rs  features.rs  input.rs  labels.rs  lib.rs  loss.rs  model.rs  output.rs
trainer/: Cargo.toml
trainer/src/: main.rs
