[package]
name = "band"
version = "0.1.0"
edition = "2024"

[dependencies]
burn =  { version = "0.20.0", features = ["std", "wgpu", "ndarray", "train", "dataset", "fusion", "tui"], default-features = false }
cpal = "0.15"
env_logger = "0.11.5"
log = "0.4.22"
ndarray = "0.17.2"
ndarray-npy = "0.10.0"
rand = "0.10.1"
symphonia = { version = "0.5", features = ["mp3", "isomp4", "aac"] }

[[bin]]
name = "train"
path = "bin/train.rs"
