[workspace]
members = ["band", "config", "data_process", "model", "sound_stream", "trainer"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Virgile HENRY"]

[workspace.dependencies]
config = { path = "config" }
cpal = "0.15"
env_logger = "0.11.5"
log = "0.4.22"
model = { path = "model" }
rand = "0.10.1"
sound_stream = { path = "sound_stream" }
symphonia = { version = "0.5", features = ["all"] }
